--- a/Semana 3 - Aprendiendo CSS/Ejercicio vacunación/vacunacion.css
+++ b/Semana 3 - Aprendiendo CSS/Ejercicio vacunación/vacunacion.css
@@ -10,14 +10,15 @@ body{
     height: 100px;
     text-align: center;
     line-height: 0px;
+    justify-content: flex-start;
 }
 header{
     background-color: white;
     height: 100px;
     width: 50%;
     line-height: 50px;
-    text-align: center;
     color: #5B85AA;
+    justify-content: flex-start;
 }
 .clearfix{
     clear: both;
@@ -32,6 +33,7 @@ header{
     float: left;
     font-family: 'Times New Roman', Times, serif;
     align-items: center;
+    justify-content: center;
 
 }
 aside{
@@ -53,9 +55,11 @@ nav ul li{
     height: 400px;
     width: 130%;
     border-radius: 20px;
+    justify-content: end;
+    align-items: center;
 }
 .article{
-    text-align: center;
+    align-items: center;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     margin-top: 15px;
     margin-bottom: 15px;
@@ -73,7 +77,8 @@ nav ul li{
     width: 300px;
     height: 100px;
     line-height: 50%;
-    align-items: center;
+    align-items: flex-end;
+    justify-content: end;
 }
 .flex-container{
     display: flex;
@@ -85,6 +90,7 @@ nav ul li{
     flex-wrap: wrap;
     justify-content: space-around;
     line-height: 50%;
-    align-items: center;
+    align-items: flex-end;
+    justify-content: space-around;
 
 }
